automate merging all company datasets in workflow

--- a/.github/workflows/schedule-updater.yml
+++ b/.github/workflows/schedule-updater.yml
@@ -20,6 +20,8 @@ jobs:
         run: pip install -r requirements.txt
       - name: Run updater
         run: python allDataScrapper.py
+      - name: Merge all company datasets
+        run: python merge_companies.py
       - name: Setup Git
         run: git config --local user.email "${{ github.actor }}@users.noreply.github.com" && git config --local user.name "${{ github.actor }}"
       - name: Commit Files
